cmake_minimum_required(VERSION 3.10)
project(ass5_6_)

set(CMAKE_CXX_STANDARD 14)

add_executable(ass5_6_ main.cpp Account.cpp Account.h AccountList.cpp AccountList.h BSTree.h Bank.cpp Bank.h Customer.cpp Customer.h Fund.cpp Fund.h Person.cpp Person.h TaskList.cpp TaskList.h Teller.cpp Teller.h Transaction.cpp Transaction.h VariableDefaultsValues.h stdafx.cpp stdafx.h targetver.h)